--- a/src/index.html
+++ b/src/index.html
@@ -67,11 +67,37 @@
         </header>
 
         <main>
-            <section class="hero">
-                <div class="container">
-                    <div class="row">
+            <section class="section section--sm">
+                <div class="component-hero">
+                    <div class="container component-hero__container">
+                        <div class="row">
+                            <div class="col-12">
+                                <div class="component-hero__inner">
+                                    <h1 class="component-hero__title">We buy everything working, malfunctioning and broken.</h1>
+                                    <p class="component-hero__intro">
+                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam id blandit sem, eget molestie dolor. Nunc ut ex sed diam imperdiety convallis vitae eu massa.
+                                    </p>
+                                    <div class="component-hero__action">
+                                        <a href="#" title="Sell Now" class="btn btn--primary component-hero__action__item">Sell Now</a>
+                                        <a href="#" title="Learn More" class="btn btn--outline-primary component-hero__action__item">Learn More</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="component-hero__art util__image-contain">
+                            <img src="assets/img/art-ninja.svg" />
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="section">
+                <div class="component-content-boxes">
+                    <div class="container">
                         <div class="col-12">
-                            <p>Hero content.</p>
+                            <div class="section__header">
+                                <h2 class="section__title">Reasons to Use Our Services</h2>
+                                <p class="section__intro">Aenean eu libero mattis ex mollis malesuada id ut odio. Duis id nisi sit amet nisi pellentesque tempor vel rhoncus nunc.</p>
+                            </div>
                         </div>
                     </div>
                 </div>
