--- a/src/index.html
+++ b/src/index.html
@@ -67,9 +67,12 @@
         </header>
 
         <main>
-            <section class="section section--sm">
+            <section class="section section--sm section--alt">
                 <div class="component-hero">
                     <div class="container component-hero__container">
+                        <div class="component-hero__art util__image-contain">
+                            <img src="assets/img/art-ninja.svg" />
+                        </div>
                         <div class="row">
                             <div class="col-12">
                                 <div class="component-hero__inner">
@@ -81,28 +84,160 @@
                                         <a href="#" title="Sell Now" class="btn btn--primary component-hero__action__item">Sell Now</a>
                                         <a href="#" title="Learn More" class="btn btn--outline-primary component-hero__action__item">Learn More</a>
                                     </div>
+                                    <ul class="component-hero__payments">
+                                        <li class="component-hero__payments__title">Get Paid With:</li>
+                                        <li class="component-hero__payments__item">
+                                            <span class="util__fa"><i class="fab fa-cc-paypal fa-2x"></i></span>
+                                        </li>
+                                        <li class="component-hero__payments__item">
+                                            <span class="util__fa"><i class="fab fa-cc-visa fa-2x"></i></span>
+                                        </li>
+                                        <li class="component-hero__payments__item">
+                                            <span class="util__fa"><i class="fab fa-bitcoin fa-2x"></i></span>
+                                        </li>
+                                    </ul>
                                 </div>
                             </div>
-                        </div>
-                        <div class="component-hero__art util__image-contain">
-                            <img src="assets/img/art-ninja.svg" />
                         </div>
                     </div>
                 </div>
             </section>
-            <section class="section">
+            <section class="section section--xl section--default">
+                <div class="section__header">
+                    <h2 class="section__title">Reasons to Use Our Services</h2>
+                    <p class="section__intro">Aenean eu libero mattis ex mollis malesuada id ut odio. Duis id nisi sit amet nisi pellentesque tempor vel rhoncus nunc.</p>
+                </div>
                 <div class="component-content-boxes">
                     <div class="container">
                         <div class="col-12">
-                            <div class="section__header">
-                                <h2 class="section__title">Reasons to Use Our Services</h2>
-                                <p class="section__intro">Aenean eu libero mattis ex mollis malesuada id ut odio. Duis id nisi sit amet nisi pellentesque tempor vel rhoncus nunc.</p>
+                            <ul class="component-content-boxes__list">
+                                <li class="component-content-boxes__item">
+                                    <div class="component-content-boxes__item__icon util__image-contain">
+                                        <img src="assets/img/icons/icon-jigsaws.svg" title="Hassle Free" alt="Hassle Free Icon" />
+                                    </div>
+                                    <div class="component-content-boxes__item__title">Hassle Free</div>
+                                    <p class="component-content-boxes__item__text">You don’t have to worry about returns, complaints, or dealing with people you don’t want to.</p>
+                                </li>
+                                <li class="component-content-boxes__item">
+                                    <div class="component-content-boxes__item__icon util__image-contain">
+                                        <img src="assets/img/icons/icon-lightning.svg" title="Instant Work" alt="Instant Work Icon" /></div>
+                                    <div class="component-content-boxes__item__title">Instant Work</div>
+                                    <p class="component-content-boxes__item__text">There's no waiting &mdash; once you’ve agreed to our price, we’ll have a shipping label out to you within 24 hours.</p>
+                                </li>
+                                <li class="component-content-boxes__item">
+                                    <div class="component-content-boxes__item__icon util__image-contain">
+                                        <img src="assets/img/icons/icon-lock.svg" title="Privacy Guaranteed" alt="Privacy Guaranteed Icon" /></div>
+                                    <div class="component-content-boxes__item__title">Privacy Guaranteed</div>
+                                    <p class="component-content-boxes__item__text">We’ll make sure your data is wiped and that there’s no way your device can link back to you.</p>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="section section--xl section--alt">
+                <div class="section__header">
+                    <h2 class="section__title">How does our service work?</h2>
+                </div>
+                <div class="component-split-content">
+                    <div class="container">
+                        <div class="col-12">
+                            <ul>
+                                <li>List Item</li>
+                                <li>List Item</li>
+                                <li>List Item</li>
+                                <li>List Item</li>
+                                <li>List Item</li>
+                            </ul>
+                            <ol>
+                                <li>List Item<Br />ist </li>
+                                <li>List Item</li>
+                                <li>List Item</li>
+                                <li>List Item</li>
+                                <li>List Item</li>
+                            </ol>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="section section--lg section--alt">
+                <div class="component-call-to-action">
+                    <div class="container">
+                        <div class="col-12">
+                            <div class="component-call-to-action__inner">
+                                <div class="component-call-to-action__info">
+                                    <div class="component-call-to-action__info__title">Sell Instantly Now</div>
+                                    <p class="component-call-to-action__info__description">Lorem ipsum dolor sit amet, consectetur.</p>
+                                </div>
+                                <div class="component-call-to-action__actions">
+                                    <a href="#" title="Sell Now" class="btn btn--secondary component-call-to-action__actions__item">Sell Now</a>
+                                    <a href="#" title="Contact Us" class="btn btn--outline-light component-call-to-action__actions__item">Contact Us</a>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </section>
         </main>
+
+        <footer class="footer">
+            <div class="container">
+                <div class="row">
+                    <div class="col-12">
+                        <div class="footer__lower">
+                            <ul class="footer__lower__links">
+                                <li>
+                                    <a href="#" title="Alexander City">Alexander City</a>
+                                </li>
+                                <li>
+                                    <a href="#" title="Andalusia">Andalusia</a>
+                                </li>
+                                <li>
+                                    <a href="#" title="Anniston">Anniston</a>
+                                </li>
+                                <li>
+                                    <a href="#" title="Athens">Athens</a>
+                                </li>
+                                <li>
+                                    <a href="#" title="Atmore">Atmore</a>
+                                </li>
+                                <li>
+                                    <a href="#" title="Auburn">Auburn</a>
+                                </li>
+                                <li>
+                                    <a href="#" title="Bessemer">Bessemer</a>
+                                </li>
+                                <li>
+                                    <a href="#" title="Birmingham">Birmingham</a>
+                                </li>
+                                <li>
+                                    <a href="#" title="Chickasaw">Chickasaw</a>
+                                </li>
+                                <li>
+                                    <a href="#" title="Clanton">Clanton</a>
+                                </li>
+                                <li>
+                                    <a href="#" title="Cullman">Cullman</a>
+                                </li>
+                                <li>
+                                    <a href="#" title="Decatur">Decatur</a>
+                                </li>
+                                <li>
+                                    <a href="#" title="Demopolis">Demopolis</a>
+                                </li>
+                                <li>
+                                    <a href="#" title="Dothan">Dothan</a>
+                                </li>
+                                <li>
+                                    <a href="#" title="Enterprise">Enterprise</a>
+                                </li>
+                            </ul>
+                            <p class="footer__copyright">Copyright &copy; 2018 SellNinja.com. All rights reserved.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </footer>
 
         <!-- Load in application JS. -->
         <script src="{{APP_JS}}"></script>
