--- a/src/order.html
+++ b/src/order.html
@@ -12,7 +12,7 @@
         <!-- Preload the imported Google fonts. -->
         <link href="{{FONT_GOOGLE}}" rel="stylesheet">
 
-        <title>Home &mdash; Sell Ninja</title>
+        <title>Order &mdash; Sell Ninja</title>
         <meta name="description" content="">
         <meta name="robots" content="index,follow">
         <!-- <link rel="author" href="humans.txt"> -->
@@ -155,110 +155,78 @@
             </div>
         </header>
 
-        <main>
-            <section class="section section--sm section--alt">
-                <div class="component-hero">
-                    <div class="container component-hero__container">
-                        <div class="component-hero__art util__image-contain">
-                            <img src="assets/img/art-ninja.svg" />
-                        </div>
-                        <div class="row">
-                            <div class="col-12">
-                                <div class="component-hero__inner">
-                                    <h1 class="component-hero__title">We buy everything working, malfunctioning and broken.</h1>
-                                    <p class="component-hero__intro">
-                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam id blandit sem, eget molestie dolor. Nunc ut ex sed diam imperdiety convallis vitae eu massa.
-                                    </p>
-                                    <div class="component-hero__action">
-                                        <a href="#" title="Sell Now" class="btn btn--primary btn--shadow component-hero__action__item">Sell Now</a>
-                                        <a href="#" title="Learn More" class="btn btn--outline-primary component-hero__action__item">Learn More</a>
-                                    </div>
-                                    <ul class="component-hero__payments">
-                                        <li class="component-hero__payments__title">Get Paid With:</li>
-                                        <li class="component-hero__payments__item">
-                                            <span class="util__fa"><i class="fab fa-cc-paypal fa-2x"></i></span>
+        <main class="content content--page">
+            <section class="section section--sm section--default">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-12">
+                            <div class="content__heading">
+                                <nav class="breadcrumbs" aria-label="breadcrumbs">
+                                    <ol class="breadcrumb breadcrumbs__nav">
+                                        <li class="breadcrumb-item">
+                                            <a href="devices.html" title="Products">Products</a>
                                         </li>
-                                        <li class="component-hero__payments__item">
-                                            <span class="util__fa"><i class="fab fa-cc-visa fa-2x"></i></span>
-                                        </li>
-                                        <li class="component-hero__payments__item">
-                                            <span class="util__fa"><i class="fab fa-bitcoin fa-2x"></i></span>
-                                        </li>
-                                    </ul>
-                                </div>
+                                        <li class="breadcrumb-item"><a href="devices-type.html">iPhone X</a></li>
+                                        <li class="breadcrumb-item active" aria-current="page">Submission</li>
+                                    </ol>
+                                </nav>
+                                <h1 class="content__title">Tell Us About Your Device (iPhone X)</h1>
                             </div>
-                        </div>
-                    </div>
-                </div>
-            </section>
-            <section class="section section--default">
-                <div class="section__header">
-                    <h2 class="section__title">Reasons to Use Our Services</h2>
-                    <p class="section__intro">Aenean eu libero mattis ex mollis malesuada id ut odio. Duis id nisi sit amet nisi pellentesque tempor vel rhoncus nunc.</p>
-                </div>
-                <div class="component-content-boxes">
-                    <div class="container">
-                        <div class="col-12">
-                            <ul class="component-content-boxes__list">
-                                <li class="component-content-boxes__item">
-                                    <div class="component-content-boxes__item__icon util__image-contain">
-                                        <img src="assets/img/icons/icon-jigsaws.svg" title="Hassle Free" alt="Hassle Free Icon" />
+                            <div class="content__main">
+                                <div class="row">
+                                    <div class="col-4">
+                                        <p>Side effects.</p>
                                     </div>
-                                    <div class="component-content-boxes__item__title">Hassle Free</div>
-                                    <p class="component-content-boxes__item__text">You don’t have to worry about returns, complaints, or dealing with people you don’t want to.</p>
-                                </li>
-                                <li class="component-content-boxes__item">
-                                    <div class="component-content-boxes__item__icon util__image-contain">
-                                        <img src="assets/img/icons/icon-lightning.svg" title="Instant Work" alt="Instant Work Icon" /></div>
-                                    <div class="component-content-boxes__item__title">Instant Work</div>
-                                    <p class="component-content-boxes__item__text">There's no waiting &mdash; once you’ve agreed to our price, we’ll have a shipping label out to you within 24 hours.</p>
-                                </li>
-                                <li class="component-content-boxes__item">
-                                    <div class="component-content-boxes__item__icon util__image-contain">
-                                        <img src="assets/img/icons/icon-lock.svg" title="Privacy Guaranteed" alt="Privacy Guaranteed Icon" /></div>
-                                    <div class="component-content-boxes__item__title">Privacy Guaranteed</div>
-                                    <p class="component-content-boxes__item__text">We’ll make sure your data is wiped and that there’s no way your device can link back to you.</p>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-            </section>
-            <section class="section section--alt">
-                <div class="section__header">
-                    <h2 class="section__title">How does our service work?</h2>
-                </div>
-                <div class="component-split-content">
-                    <div class="container">
-                        <div class="col-12">
-                            <div class="component-split-content__inner">
-                                <div class="component-split-content__left">
-                                    <div class="component-split-content__content component-split-content__content--image">
-                                        <img src="assets/img/art-deskwork.svg" title="How We Work" alt="How We Work Image" />
-                                    </div>
-                                </div>
-                                <div class="component-split-content__right">
-                                    <div class="component-split-content__content">
-                                        <p class="lead font-weight-bold">Process Steps</p>
-                                        <p>
-                                            <ol>
-                                                <li>
-                                                    <p><a href="#" title="Fill Out Our Form">Fill out our form</a> or text us what you have at (555) 555-5555.</p>
-                                                </li>
-                                                <li>
-                                                    <p>We'll get back to you with a price.</p>
-                                                </li>
-                                                <li>
-                                                    <p>If you agree, we'll send out a shipping label to you within 24 hours.</p>
-                                                </li>
-                                                <li>
-                                                    <p>Drop your device off at your local post office.</p>
-                                                </li>
-                                                <li>
-                                                    <p>Once we’ve received it we'll send you your payment within 24 hours!</p>
-                                                </li>
-                                            </ol>
+                                    <div class="col-7 offset-1">
+                                        <h3 class="content__subheading">Description</h3>
+                                        <p class="content__description">
+                                            The iPhone Xs is in tune with beloved versions of previous Apple mobile phones in the sense that it is built in privacy and security from the very beginning. Every detail, from its sleek design to the innovative ways its components are recycled, goes into setting this addition to iPhones apart from the crowd. One of the most noticeable attractions of the iPhone Xs is its indulgent 14.73 cm (5.8) Super Retina Display. Sleek in appearance and constructed to be sturdy, this iPhone delivers in terms of aesthetics and durability. It is even resistant to liquid spills and dust. The A12 Bionic Chip which powers this Apple phone transforms the way you look at pictures, the way you game, or even the way you browse the internet on your phone with its fluid performance.
                                         </p>
+                                        <h3 class="content__subheading">Submission Details</h3>
+                                        <form class="form">
+                                            <div class="form-group">
+                                                <label for="submissionDeviceModel" class="form__label">Device Model</label>
+                                                <select class="custom-select custom-select-lg" id="submissionDeviceModel">
+                                                    <option>iPhone X</option>
+                                                    <option>iPhone XS</option>
+                                                    <option>iPhone XS Max</option>
+                                                    <option>iPhone Xr</option>
+                                                </select>
+                                            </div>
+                                            <div class="form-group">
+                                                <label for="submissionDeviceStorage" class="form__label">Device Storage</label>
+                                                <select class="custom-select custom-select-lg" id="submissionDeviceStorage">
+                                                    <option selected>64GB</option>
+                                                    <option>128GB</option>
+                                                    <option>256GB</option>
+                                                    <option>512GB</option>
+                                                </select>
+                                            </div>
+                                            <div class="form-group">
+                                                <label for="submissionName" class="form__label">Your Name</label>
+                                                <input type="text" class="form-control form-control-lg" id="submissionName">
+                                            </div>
+                                            <div class="form-group">
+                                                <label for="submissionEmail" class="form__label">Email Address</label>
+                                                <input type="email" class="form-control form-control-lg" id="submissionEmail">
+                                            </div>
+                                            <div class="form-group row">
+                                                <div class="col-12">
+                                                    <label for="submissionPhone" class="form__label">Phone Number (Optional)</label>
+                                                </div>
+                                                <div class="col-2">
+                                                    <input type="text" class="form-control form-control-lg" id="submissionPhonePrefix" placeholder="+1" maxlength="4">
+                                                </div>
+                                                <div class="col-10">
+                                                    <input type="text" class="form-control form-control-lg" id="submissionPhone">
+                                                </div>
+                                            </div>
+                                            <div class="form-group">
+                                                <label for="submissionDescription" class="form__label">Description</label>
+                                                <textarea class="form-control form-control-lg" id="submissionDescription" rows="6"></textarea>
+                                            </div>
+                                            <button type="submit" class="btn btn--primary btn--shadow w-100 form__submit">Submit</button>
+                                        </form>
                                     </div>
                                 </div>
                             </div>
@@ -266,7 +234,8 @@
                     </div>
                 </div>
             </section>
-            <section class="section section--alt">
+
+            <section class="section">
                 <div class="component-call-to-action">
                     <div class="container">
                         <div class="col-12">
